--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ nav ul li a:hover:before{
                         <li><a onclick="onHighlight('square-dark')" style="cursor: pointer;">Projects</a></li>
                         <li><a onclick="onHighlight('square-light')" style="cursor: pointer;">Courses</a></li>
                         <li><a onclick="onHighlight('square-image')" style="cursor: pointer;">Contact</a></li>
-                        <li><a href="#">Resume</a></li>
+                        <li><a href="https://docs.google.com/uc?export=download&id=1KBcR6DdTuZ9PZl7o93JJvHMeQoZYz2bG">Resume</a></li>
                     </ul>
                 </nav>
                 <div class="grid-item grid-top information">
