--- a/skills.html
+++ b/skills.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Ahmad Abbas</title>
+<title>Ahmad Abbas | History</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -14,8 +14,8 @@
   <div class="navbar-inner">
     <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> <a class="brand" href="index.html"><img src="img/user.png" style="background:white; height: 50px;" alt=""></a>
       <ul class="nav nav-collapse pull-right">
-        <li><a href="index.html" class="active"><i class="icon-user"></i> Profile</a></li>
-        <li><a href="skills.html"><i class="icon-trophy"></i> History</a></li>
+        <li><a href="index.html"><i class="icon-user"></i> Profile</a></li>
+        <li><a href="skills.html" class="active"><i class="icon-trophy"></i> History</a></li>
         <li><a href="work.html"><i class="icon-picture"></i> Work</a></li>
         <li><a href="resume.html"><i class="icon-doc-text"></i> Resume</a></li>
       </ul>
@@ -23,20 +23,52 @@
     </div>
   </div>
 </div>
-<div class="container profile">
-  <div class="span3"> <img src="img/mini.png" style="border-radius: 50%;" alt=""> </div>
-  <div class="span5">
-    <h1>Ahmad Abbas</h1>
-    <h3>Freelance Web Developer</h3>
-    <p>Building an application is easy, everyone has the resources to learn anything nowdays and I want to learn more. Coding is fun.</p>
-    <h3 style="color: #39c96d;">What I Learned, So Far.</h3>
-    <ul style="font-size: 18px">
-      <li>Small details matter.</li>
-      <li>Ugly websites can be beautiful with just one div.</li>
-      <li>Don't be Modern, be Creative.</li>
-    </ul>
-    <p>Build A perfect website for better clients.</p>
-    <a href="resume.html" class="hire-me"><i class="icon-paper-plane"></i> Conact Me </a> </div>
+<div class="container skills">
+  <h2>My History</h2>
+  <div class="row">
+    <div class="span3">
+      <div class="ps">
+        <h3>Java</h3>
+      </div>
+    </div>
+    <div class="span5">
+      <h3>Google Play Developer <span>2015</span></h3>
+      <div class="expand-bg"> <span class="expand ps2"> &nbsp; </span> </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span3">
+      <div class="ai">
+        <h3>C#</h3>
+      </div>
+    </div>
+    <div class="span5">
+      <h3>Unity3D Game Development <span>2016</span></h3>
+      <div class="expand-bg"> <span class="expand ai2"> &nbsp; </span> </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span3">
+      <div class="html">
+        <h3>Angular</h3>
+      </div>
+    </div>
+    <div class="span5">
+      <h3>Dynamic SPA Projects <span>2018</span></h3>
+      <div class="expand-bg"> <span class="expand html2"> &nbsp; </span> </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span3">
+      <div class="css">
+        <h3>Node</h3>
+      </div>
+    </div>
+    <div class="span5">
+      <h3>Freelance Web Developer <span>2019</span></h3>
+      <div class="expand-bg"> <span class="expand css2"> &nbsp; </span> </div>
+    </div>
+  </div>
 </div>
 <div class="row social">
   <ul class="social-icons">
@@ -48,7 +80,7 @@
     <li><a href="#"><img src="img/dr.png" alt=""></a></li>
   </ul>
 </div>
-<div class="footer" href="css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
+<div class="footer">
   <div class="container">
     <p class="pull-left"><a href="http://alif-alif.co">www.alif-alif.com</a></p>
     <p class="pull-right"><a href="#myModal" role="button" data-toggle="modal"> <i class="icon-mail"></i> CONTACT</a></p>
