--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <li>Don't be Modern, be Creative.</li>
     </ul>
     <p>Build A perfect website for better clients.</p>
-    <a href="resume.html" class="hire-me"><i class="icon-paper-plane"></i> Conact Me </a> </div>
+    <a href="resume.html" class="hire-me"><i class="icon-paper-plane"></i> Contact Me </a> </div>
 </div>
 <div class="row social">
   <ul class="social-icons">
