--- a/resume.html
+++ b/resume.html
@@ -26,8 +26,8 @@
 <div class="container resume">
   <h2>My Resume</h2>
   <h3>You can download my resume for your reference and I hope that we will meet very soon! :)</h3>
-   <div class="btn-center"> <a href="https://docs.google.com/uc?export=download&id=1m6yeBCez6sDTKWLfVAHLPsuRtvmKuAX6" class="hire-me"><i class="icon-download"></i> English</a></div>
-  <div class="btn-center"> <a href="https://docs.google.com/uc?export=download&id=10fobv_aP4Ah_r8T_oN6OSxtmm6OuIm71" class="hire-me"><i class="icon-download"></i> Hebrew</a></div>
+   <div class="btn-center"> <a href="" class="hire-me"><i class="icon-download">https://www.dropbox.com/s/xt4eekf8v5wocu9/Ahmad%20Abbas%20-%20QA%20resume.pdf?dl=0</i> English</a></div>
+  <div class="btn-center"> <a href="https://www.dropbox.com/s/s4bkbxcl4evkt69/%D7%90%D7%97%D7%9E%D7%93%20%D7%A2%D7%91%D7%90%D7%A1%20-%20%D7%A7%D7%95%D7%A8%D7%95%D7%AA%20%D7%97%D7%99%D7%99%D7%9D.pdf?dl=0" class="hire-me"><i class="icon-download"></i> Hebrew</a></div>
 </div>
 <div class="row social">
   <ul class="social-icons">
